<resources>

    <string name="app_name">Move Application</string>

    <string name="ignore">ignore</string>

    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <string name="menu_home_title">HOME</string>
    <string name="menu_record_title">RECORD</string>
    <string name="menu_statistic_title">STATISTIC</string>

    <string name="default_elapsedTimeTextView_text">경과 시간 00:00:00</string>
    <string name="default_totalTravelDistanceTextView_text">총 이동 거리 0 m</string>
    <string name="default_averageSpeedTextView_text">평균 속력 0.0 km/h</string>
    <string name="default_stepTextView_text">걸음 수 0</string>
    <string name="default_calorieConsumptionTextView_text">칼로리 소모량 0.0 kcal</string>

    <!-- Record Fragment -->
    <string name="recordFragment_totalMileage_default_text">마일리지 0 적립</string>
    <string name="recordFragment_totalTravelDistance_default_text">총 이동 거리 0 km</string>
    <string name="recordFragment_totalStep_default_text">총 걸음 수 0 걸음</string>

</resources>